--- a/references.bib
+++ b/references.bib
@@ -207,3 +207,11 @@
 	note = {{\_}eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/cyto.a.20258},
 	langid = {en}
 }
+
+@article{googlesheets4,
+	title = {googlesheets4: Access Google Sheets using the Sheets API V4},
+	author = {Bryan, Jennifer},
+	year = {2023},
+	date = {2023},
+	url = {https://CRAN.R-project.org/package=googlesheets4}
+}
