babs4/week-6 overview

--- a/r4babs4/week-6/overview.qmd
+++ b/r4babs4/week-6/overview.qmd
@@ -5,19 +5,23 @@ toc: true
 toc-location: right
 ---
 
-This week you will 
+
 
 ### Learning objectives
 
 The successful student will be able to:
 
--   
+-   evaluate their progress and identify any steps they have missed
 
--  
+-   create density plots to visualise the distribution, and gating of,
+    the APC TNF-α and FTIC signals in live cells
 
--   
+-   calculate the the percentage of cells in each quadrant of a quadrant
+    gated gated plot of TNFa_APC_Lin signal against the E_coli_FITC_Lin 
 
--   
+-   annotate ggplots as desired
+
+-   import data from a googlesheet
 
 ### Instructions
 
@@ -26,7 +30,15 @@ The successful student will be able to:
 
 2.  [Workshop](workshop.qmd)
     
-    i.💻 
+    i. 💻  Create density plots to visualise the distribution, and gating of,
+    the APC TNF-α and FTIC signals in live cells
+    
+    ii. 💻  Calculate the the percentage of cells in each quadrant of a quadrant
+    gated gated plot of TNFa_APC_Lin signal against the E_coli_FITC_Lin
+    
+    iii. 💻  Annotate ggplots
+    
+    iv. 💻  Import data from a googlesheet
 
 3.  [Consolidate](study_after_workshop.qmd)
 
